# OCamlEopl

./: dune-project  eopl.opam
lib/: ast.ml  dune  environment.ml  interpreter.ml  lexer.mll  parser.mly  syntax.ml
test/: dune
